<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="net.wilczak.freedivecomp.android.ui.enterresult.EnterResultPerformanceViewModel" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:id="@+id/guide_66"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66" />

        <android.support.constraint.Guideline
            android:id="@+id/guide_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/enterresult_guide_end" />

        <TextView
            android:id="@+id/performance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.componentName}"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:text="@string/performance_distance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/announcement_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start_announcement"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="@+id/guide_66"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/announcement_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.announcementFormatted}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/announcement_label"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="75m" />

        <EditText
            android:id="@+id/performance_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/start_performance"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:text="@={viewModel.performanceValue}"
            app:layout_constraintEnd_toStartOf="@+id/guide_end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/performance_label" />

        <TextView
            android:id="@+id/performance_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.componentUnit}"
            tools:text="@string/unit_meter"
            app:layout_constraintBaseline_toBaselineOf="@+id/performance_value"
            app:layout_constraintStart_toEndOf="@+id/performance_value" />

    </android.support.constraint.ConstraintLayout>
</layout>